<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegisterActivity"
    android:padding="25dp"
    android:background="">

    <TextView
        android:id="@+id/tvRegister"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/please_create_new_account"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/etUsernameRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/tvRegister"
        android:hint="Username"
        android:drawableStart="@drawable/baseline_account_circle_24"
        android:drawablePadding="24dp"/>

    <EditText
        android:id="@+id/etNameRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/etUsernameRegister"
        android:hint="@string/your_name"
        android:drawablePadding="24dp"
        android:drawableStart="@drawable/baseline_account_box_24"/>

    <EditText
        android:id="@+id/etPasswordRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/etNameRegister"
        android:hint="@string/password_register"
        android:inputType="textPassword"
        android:drawablePadding="24dp"
        android:drawableStart="@drawable/ic_password"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPasswordRegister"
        android:text="@string/register"/>

    <TextView
        android:id="@+id/tvAlreadyHave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnRegister"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:text="Already Have Account? Login Here"/>

</RelativeLayout>