<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity"
    android:padding="25dp"
    android:background="">

    <TextView
        android:id="@+id/tvLogin"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/please_login"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/tvLogin"
        android:hint="Username"
        android:drawableStart="@drawable/baseline_account_circle_24"
        android:drawablePadding="24dp"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/etUsername"
        android:hint="Password"
        android:inputType="textPassword"
        android:drawablePadding="24dp"
        android:drawableStart="@drawable/ic_password"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPassword"
        android:text="@string/login"/>

    <TextView
        android:id="@+id/tvCreateAccount"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:textAlignment="center"
        android:text="@string/create_new_account"/>
</RelativeLayout>